kubernetes/core/networking/nginx-int-ingress-system/services/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: networking
spec:
  type: ExternalName
  externalName: haos-srv-01.${LOCAL_DOMAIN}
  ports:
    - name: http
      port: &port 8123
      protocol: TCP
      targetPort: *port
