kubernetes/core/networking/nginx-int-ingress-system/services/home-assistant/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app home-assistant-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: ${LOCAL_DOMAIN}
spec:
  ingressClassName: int-ingress
  rules:
    - host: &host home-assistant.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8123
